gcc/testsuite/gdc.test/runnable/imports/test3b.d
module imports.test3b;

import imports.test3a;

class Bfoo
{
}
