gcc/testsuite/gdc.test/fail_compilation/imports/test23109c.d
module imports.test23109c;
import imports.test23109b;
class Statement {}
